--- a/app/src/main/res/drawable/ic_rows.xml
+++ b/app/src/main/res/drawable/ic_rows.xml
@@ -6,5 +6,5 @@
     android:tint="?attr/colorControlNormal">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M3,18h18v-2L3,16v2zM3,13h18v-2L3,11v2zM3,6v2h18L21,6L3,6z"/>
+      android:pathData="M22,7H2V2h20V7zM22,9.5H2v5h20V9.5zM22,17H2v5h20V17z"/>
 </vector>
