--- a/app/src/main/res/layout/activity_detail_country.xml
+++ b/app/src/main/res/layout/activity_detail_country.xml
@@ -16,7 +16,8 @@
         android:src="@drawable/ic_phone"
         app:fab_size="normal"
         app:fab_colorNormal="?attr/colorPrimary"
-        app:fab_colorPressed="?attr/colorPrimaryVariant" />
+        app:fab_colorPressed="?attr/colorPrimaryVariant"
+        android:contentDescription="@string/key_theme" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -35,17 +36,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp">
-                <de.hdodenhof.circleimageview.CircleImageView
+                <ImageView
                     android:id="@+id/detail_ic_flag"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="134dp"
+                    android:layout_height="84dp"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentEnd="true"
-                    android:minWidth="70dp"
-                    android:minHeight="70dp"
+                    android:minWidth="90dp"
+                    android:minHeight="60dp"
                     android:src="@mipmap/ic_launcher"
-                    app:civ_border_width="0.6pt"
-                    app:civ_border_color="?attr/colorPrimary"/>
+                    android:contentDescription="@string/country" />
                 <TextView
                     android:id="@+id/detail_tv_country"
                     android:layout_width="match_parent"
@@ -56,7 +56,7 @@
                     android:maxLines="1"
                     android:ellipsize="end"
                     android:paddingHorizontal="4dp"
-                    android:textSize="18sp"
+                    android:textSize="20sp"
                     android:textStyle="bold"
                     android:text="@string/country"
                     android:textColor="?attr/colorPrimary"/>
@@ -161,8 +161,7 @@
                                 android:padding="4dp"
                                 android:textColor="?attr/colorOnSecondary"
                                 android:textSize="12sp"
-                                android:textStyle="bold"
-                                android:text="@string/date"/>
+                                android:textStyle="bold"/>
                         </TableRow>
                         <TableRow
                             android:background="?attr/colorPrimaryVariant"
