--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,13 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.PantauCovid19ByAgil" parent="Theme.MaterialComponents.NoActionBar">
+    <style name="Theme.PantauCovid19ByAgil" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#CD4418</item>
         <item name="colorPrimaryVariant">#5C1A05</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@android:color/darker_gray</item>
-        <item name="colorSecondaryVariant">#6B8382</item>
+        <item name="colorSecondaryVariant">#A2FFFFFF</item>
         <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
@@ -28,7 +28,11 @@
         <item name="android:layout_weight">1</item>
         <item name="android:layout_margin">2dp</item>
         <item name="android:gravity">center</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+    <style name="displayHead" parent="Theme.PantauCovid19ByAgil">
+        <item name="android:textColor">?attr/colorOnSecondary</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:fontFamily">monospace</item>
     </style>
 </resources>
